After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 796699 - msdkdec: Fix output frame PTS
msdkdec: Fix output frame PTS
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.15.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks: 789886 796521
 
 
Reported: 2018-06-27 21:45 UTC by sreerenj
Modified: 2018-07-14 01:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Ensure the correct PTS for output frames (2.47 KB, patch)
2018-06-27 21:46 UTC, sreerenj
committed Details | Review

Description sreerenj 2018-06-27 21:45:37 UTC
If upstream provides PTS in each buffer and frame-recording required, then gst-msdk's approach to use gst_video_decoder_get_oldest_frame() to push output frames will not account for the PTS.

Thanks to v4l2decoder's custom method to get oldest frame which accounts the PTS too.
Comment 1 sreerenj 2018-06-27 21:46:50 UTC
Created attachment 372857 [details] [review]
Ensure the correct PTS for output frames
Comment 2 sreerenj 2018-07-14 01:06:51 UTC
Review of attachment 372857 [details] [review]:

this was fixed with commit 9efb4c9179aa48437d8d4dbe7fc78f4494602005
Comment 3 sreerenj 2018-07-14 01:08:55 UTC
Review of attachment 372857 [details] [review]:

this was fixed with commit 9efb4c9179aa48437d8d4dbe7fc78f4494602005
Comment 4 sreerenj 2018-07-14 01:08:56 UTC
Review of attachment 372857 [details] [review]:

this was fixed with commit 9efb4c9179aa48437d8d4dbe7fc78f4494602005
Comment 5 sreerenj 2018-07-14 01:08:57 UTC
Review of attachment 372857 [details] [review]:

this was fixed with commit 9efb4c9179aa48437d8d4dbe7fc78f4494602005
Comment 6 sreerenj 2018-07-14 01:08:57 UTC
Review of attachment 372857 [details] [review]:

this was fixed with commit 9efb4c9179aa48437d8d4dbe7fc78f4494602005
Comment 7 sreerenj 2018-07-14 01:08:58 UTC
Review of attachment 372857 [details] [review]:

this was fixed with commit 9efb4c9179aa48437d8d4dbe7fc78f4494602005
Comment 8 sreerenj 2018-07-14 01:08:59 UTC
Review of attachment 372857 [details] [review]:

this was fixed with commit 9efb4c9179aa48437d8d4dbe7fc78f4494602005
Comment 9 sreerenj 2018-07-14 01:09:00 UTC
Review of attachment 372857 [details] [review]:

this was fixed with commit 9efb4c9179aa48437d8d4dbe7fc78f4494602005
Comment 10 sreerenj 2018-07-14 01:28:30 UTC
Sorry for the noise! My browser gets stuck and each click resubmits the message.
closing.
Comment 11 Nicolas Dufresne (ndufresne) 2018-07-14 01:47:01 UTC
No worries, happens all the time with bugzilla.